examples/failing/f005-scopes.sq
{
    {        
        var y: u32;
        y = 13;
    }

    print32(y);
}